# RAG-with-A2A

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  semantic_cache.json  setup.py  test.py  users.json
src/qa_system_with_a2a_demo/: config.py
src/qa_system_with_a2a_demo/agents/orchestrator/: agent.py  main.py  orchestrator_agent.proto  orchestrator_agent_pb2.py  orchestrator_agent_pb2_grpc.py
src/qa_system_with_a2a_demo/agents/rag_agent/: app.py  main.py  rag_agent.proto  rag_agent_pb2.py  rag_agent_pb2_grpc.py  semantic_cache.json
src/qa_system_with_a2a_demo/agents/web_search_agent/: main.py  web_search_agent.proto  web_search_agent_pb2.py  web_search_agent_pb2_grpc.py
src/qa_system_with_a2a_demo/models/: download.py
src/qa_system_with_a2a_demo/tools/: document_tool.py  llm.py  web_search_tool.py
