[project]
name = "qa-system-with-a2a-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Temitayo Adejuyigbe",email = "temitayo.Adejuyigbe@periculum.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq (>=0.24.0,<0.25.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-adk (>=0.4.0,<0.5.0)"
]

[tool.poetry]
packages = [{include = "qa_system_with_a2a_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
